compiler/crates/types/tests/typeerr/union_miss.th
ให้ x: ตัวเลข | ข้อความ = จริง;
